--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
   100% { -webkit-filter: invert(100%); }
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Tahoma";
   font-size: 16px;
@@ -33,8 +37,8 @@ body {
   background-size: cover;
   
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center center;
+  /*background-attachment: fixed;*/
+  /*background-position: center center;*/
   overflow: hidden;
   position: absolute;
 
