--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ body {
   background-size: cover;
   
   background-repeat: no-repeat;
-  /*background-attachment: fixed;*/
-  /*background-position: center center;*/
+  background-attachment: fixed;
+  background-position: center center;
   overflow: hidden;
   position: absolute;
 
