--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 
 html {
   height: 100%;
+  min-height: 100%;
 }
 
 body {
@@ -28,7 +29,7 @@ body {
   font-size: 16px;
   padding: 0;
   margin: 0;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   background-image: url("../img/backSea.jpg");
   -webkit-background-size: cover;
