--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   font-size: 16px;
   padding: 0;
   margin: 0;
-  min-height: 100%;
+  height: 100vh;
   width: 100%;
   background-image: url("../img/backSea.jpg");
   -webkit-background-size: cover;
