Made landscape ready.

--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,58 @@ h2 {
   color: #fff;
 }
 
-@media( max-width: 800px) {
+@media screen and (max-width: 1024px) and (orientation: landscape) {
+  .link_container {
+    margin-top: 1rem;
+    border: 5px dashed rgba(100, 100, 255, .5);
+
+    background: rgba(0, 0, 0, .3);
+    mix-blend-mode: screen;
+    -webkit-filter: blur(1px);
+    -moz-filter: blur(1px);
+    -o-filter: blur(1px);
+    -ms-filter: blur(1px);
+    filter: blur(1px);
+  }
+  .link_list li a {
+    text-decoration: none;
+    font-size: 6.5vh;
+    color: blue;
+    -webkit-filter: blur(0px);
+    -moz-filter: blur(0px);
+    -o-filter: blur(0px);
+    -ms-filter: blur(0px);
+    filter: blur(0px);
+  }
+
+  #div_title {
+    width: 70vh;
+    height: 70vh;
+    box-sizing: border-box;
+    margin: 1rem auto 0 auto;
+  }
+
+  h1 {
+    font-size: 8vh;
+  }
+
+  h2 {
+    font-size: 9.6vh;
+  }
+  .animSong {
+    font-size: 10vh;
+  }
+
+  .small_p {
+    font-size: 3vh;
+  }
+
+  .comingSoonP {
+    font-size: 2.5vh;
+  }
+}
+
+@media screen and (max-width: 800px) and (orientation: portrait) {
   .link_container {
     margin-top: 1rem;
     border: 5px dashed rgba(100, 100, 255, .5);
@@ -352,7 +403,7 @@ h2 {
   .link_list li a {
     text-decoration: none;
     font-size: 6.5vw;
-    color: blue
+    color: blue;
     -webkit-filter: blur(0px);
     -moz-filter: blur(0px);
     -o-filter: blur(0px);
