--- a/css/style.css
+++ b/css/style.css
@@ -100,18 +100,18 @@ body.background-loaded:after {
 
   background: rgba(0, 0, 0, .3);
   mix-blend-mode: screen;
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+  -webkit-filter: blur(5px) grayscale(.5);
+  -ms-filter: blur(5px) grayscale(.5);
+  filter: blur(5px) grayscale(.5);
+
+  -webkit-transition: all 100ms ease-in;
+  -moz-transition: all 100ms ease-in;
+  transition: all 100ms ease-in;
 }
 .link_container:hover {
-  -webkit-filter: blur(1px);
-  -moz-filter: blur(1px);
-  -o-filter: blur(1px);
-  -ms-filter: blur(1px);
-  filter: blur(1px);
+  -webkit-filter: blur(1px) grayscale(0);
+  -ms-filter: blur(1px) grayscale(0);
+  filter: blur(1px) grayscale(0);
   /*animation: rotateHue 8000ms ease-in-out infinite;*/
 
 }
@@ -371,14 +371,12 @@ footer {
   width: 100%;
   height: 200px;
   opacity: .4;
-  background: rgba(20, 20, 20, .5);
+  background: rgba(20, 20, 250, .8);
   border-top: 6px dotted #3f7;
 
-  -webkit-filter: blur(2px);
-  -moz-filter: blur(2px);
-  -o-filter: blur(2px);
-  -ms-filter: blur(2px);
-  filter: blur(2px);
+  -webkit-filter: blur(2px) grayscale(1);
+  -moz-filter: blur(2px) grayscale(1);
+  filter: blur(2px) grayscale(1);
   -webkit-transform: translateY(160px);
   -moz-transform: translateY(160px);
   -ms-transform: translateY(160px);
@@ -393,20 +391,19 @@ footer {
   font-family: Helvetica, sans-serif;
 }
 footer:hover {
-  -webkit-filter: blur(0px);
-  -moz-filter: blur(0px);
-  -o-filter: blur(0px);
-  -ms-filter: blur(0px);
-  filter: blur(0px);
+  -webkit-filter: blur(0px) grayscale(.8);
+  -moz-filter: blur(0px) grayscale(.8);
+  filter: blur(0px) grayscale(.8);
   -webkit-transform: translateY(0px);
   -moz-transform: translateY(0px);
   -ms-transform: translateY(0px);
   -o-transform: translateY(0px);
   transform: translateY(0px);
   opacity: .8;
-  background: rgba(20, 20, 20, .8);
+  /*background: rgba(20, 20, 20, .8);*/
 
 }
+
 
 footer p {
   font-weight: lighter;
