--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ body {
   position: absolute;
 
   -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
 
 }
@@ -96,12 +95,12 @@ body.background-loaded:after {
 
 .link_container {
   margin-top: 1rem;
-  border: 5px dashed rgba(100, 100, 255, .5);
+  border-top: 5px dashed rgba(100, 100, 255, .5);
+  border-bottom: 5px dashed rgba(100, 100, 255, .5);
 
   background: rgba(0, 0, 0, .3);
   mix-blend-mode: screen;
   -webkit-filter: blur(5px) grayscale(.5);
-  -ms-filter: blur(5px) grayscale(.5);
   filter: blur(5px) grayscale(.5);
 
   -webkit-transition: all 100ms ease-in;
@@ -110,7 +109,6 @@ body.background-loaded:after {
 }
 .link_container:hover {
   -webkit-filter: blur(1px) grayscale(0);
-  -ms-filter: blur(1px) grayscale(0);
   filter: blur(1px) grayscale(0);
   /*animation: rotateHue 8000ms ease-in-out infinite;*/
 
@@ -135,15 +133,11 @@ body.background-loaded:after {
   font-size: 6.5vw;
   color: blue;
   -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);
 }
 .link_list li a:hover {
   -webkit-filter: blur(0px);
-  -moz-filter: blur(0px);
-  -o-filter: blur(0px);
   -ms-filter: blur(0px);
   filter: blur(0px);
 }
@@ -181,8 +175,6 @@ body.background-loaded:after {
   transition: opacity .5s;
 
   -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);
 
@@ -448,7 +440,6 @@ footer p {
   border-bottom-right-radius: 5px;
   -webkit-transition: all 300ms;
   -moz-transition: all 300ms;
-  -ms-transition: all 300ms;
   -o-transition: all 300ms;
   transition: all 300ms;
 }
@@ -467,7 +458,6 @@ footer p {
   letter-spacing: 2px;
   -webkit-transition: all 100ms;
   -moz-transition: all 100ms;
-  -ms-transition: all 100ms;
   -o-transition: all 100ms;
   transition: all 100ms;
 }
@@ -492,8 +482,6 @@ footer p {
     background: rgba(0, 0, 0, .3);
     mix-blend-mode: screen;
     -webkit-filter: blur(1px);
-    -moz-filter: blur(1px);
-    -o-filter: blur(1px);
     -ms-filter: blur(1px);
     filter: blur(1px);
   }
@@ -502,8 +490,6 @@ footer p {
     font-size: 6.5vh;
     color: blue;
     -webkit-filter: blur(0px);
-    -moz-filter: blur(0px);
-    -o-filter: blur(0px);
     -ms-filter: blur(0px);
     filter: blur(0px);
   }
@@ -514,8 +500,6 @@ footer p {
     box-sizing: border-box;
     margin: 1rem auto 0 auto;
     -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -o-filter: blur(2px);
     -ms-filter: blur(2px);
     filter: blur(2px);
   }
