--- a/css/style.css
+++ b/css/style.css
@@ -154,13 +154,13 @@ body.background-loaded:after {
 
 #div_title {
   width: 25em;
-  height: 25em;  
+  height: 25em;
   margin: 0 auto;
   /*background-color: #e2f2f6;*/
   /*background-color: #fff;*/
-  background: url('../img/sheet.jpg'), no-repeat;
+  /*background: url('../img/sheet.jpg'), no-repeat;*/
   padding: 1.4em;
-  opacity: .5;
+  opacity: .9;
   border-radius: .2em;
   position: fixed;
   top: 50%;
@@ -174,9 +174,9 @@ body.background-loaded:after {
   -webkit-transition: opacity .5s;
   transition: opacity .5s;
 
-  -webkit-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+  /*-webkit-filter: blur(5px);*/
+  /*-ms-filter: blur(5px);*/
+  /*filter: blur(5px);*/
 
 
 
@@ -197,7 +197,7 @@ body.background-loaded:after {
   border: 5px solid #a72f0f;
 }
 .borderShadow {
-  box-shadow: 0 0 .1em #555, 0 0 2em #a72f0f, inset 0 0 2em #a72f0f;
+  box-shadow: 0 0 .1em #555, 0 0 4em #a72f0f, inset 0 0 4em #a72f0f;
 }
 
 .animInvert {
@@ -230,18 +230,19 @@ body.background-loaded:after {
 
 h1 {
   margin: 0;
-  margin-bottom: .95em;
-  margin-top: .5em;
-  margin-left: .1em;
+  margin-bottom: -1.4em;
+  margin-top: 5em;
+  /*margin-left: .1em;*/
   color: #000;
   text-align: center;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
-  font-size: 3.2em;
+  font-size: .8em;
   letter-spacing: .2em;
   text-shadow: 0 0 2px #444;
   transition: text-shadow .3s;  
-  -webkit-transition: text-shadow .3s;  
+  -webkit-transition: text-shadow .3s;
+  /*opacity: 0;*/
 }
 .animFont {
   text-shadow: 0 0 2px #444, -4px -4px 4px #3f7, 4px 4px 7px #3f7;
@@ -249,7 +250,8 @@ h1 {
 
 h2 {
   margin: 0;
-  margin-bottom: .5em;
+  /*margin-top: .5em;*/
+  /*margin-bottom: .0em;*/
   /*margin-left: .02em;*/
   color: #a72f0f;
   font-family: 'Libre Baskerville', serif;
@@ -257,7 +259,7 @@ h2 {
   text-align: center;
   font-size: 4.4em;
   transform:scale(1,1.6); /* W3C */
-  -webkit-transform:scale(1,1.6); /* Safari and Chrome */
+  -webkit-transform:scale(1,1.6) translateY(.4em); /* Safari and Chrome */
   -moz-transform:scale(1,1.6); /* Firefox */
   -ms-transform:scale(1,1.6); /* IE 9 */
   -o-transform:scale(1,1.6); /* Opera */
@@ -268,6 +270,7 @@ h2 {
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
 
+
   -webkit-transition: font-size 1s, text-shadow 1s, -webkit-filter 1s;
   transition: font-size 1s, text-shadow 1s, filter 1s;
 
@@ -275,7 +278,7 @@ h2 {
 
 .animSong {
   font-size: 4.8em;
-  text-shadow: 0 0 2px #400, -2px -2px 4px #4c7, 10px 10px #ccc;
+  text-shadow: 0 0 .05em #400, -.03em -.03em .05em #4c7, .14em .14em #ccc;
   -webkit-filter: grayscale(0);
   filter: grayscale(0);
 }
@@ -516,20 +519,28 @@ footer p {
     height: 70vh;
     box-sizing: border-box;
     margin: 1rem auto 0 auto;
-    -webkit-filter: blur(2px);
-    -ms-filter: blur(2px);
-    filter: blur(2px);
+    opacity: .9;
+    padding: 0;
+    /*-webkit-filter: blur(2px);*/
+    /*-moz-filter: blur(2px);*/
+    /*-o-filter: blur(2px);*/
+    /*-ms-filter: blur(2px);*/
+    /*filter: blur(2px);*/
   }
 
+  iframe {
+    width: 65vh;
+    height: 65vh;
+  }
   h1 {
-    font-size: 8vh;
+    font-size: 4vh;
   }
 
   h2 {
-    font-size: 9.6vh;
+    font-size: 12.6vh;
   }
   .animSong {
-    font-size: 10vh;
+    font-size: 11.4vh;
   }
 
   .small_p {
@@ -548,11 +559,11 @@ footer p {
 
     background: rgba(0, 0, 0, .3);
     mix-blend-mode: screen;
-    -webkit-filter: blur(1px);
-    -moz-filter: blur(1px);
-    -o-filter: blur(1px);
-    -ms-filter: blur(1px);
-    filter: blur(1px);
+    /*-webkit-filter: blur(1px);*/
+    /*-moz-filter: blur(1px);*/
+    /*-o-filter: blur(1px);*/
+    /*-ms-filter: blur(1px);*/
+    /*filter: blur(1px);*/
   }
   .link_list li a {
     text-decoration: none;
@@ -570,11 +581,17 @@ footer p {
     height: 90vw;
     box-sizing: border-box;
     margin: 0 auto;
-    -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -o-filter: blur(2px);
-    -ms-filter: blur(2px);
-    filter: blur(2px);
+    padding: 0;
+    /*-webkit-filter: blur(2px);*/
+    /*-moz-filter: blur(2px);*/
+    /*-o-filter: blur(2px);*/
+    /*-ms-filter: blur(2px);*/
+    /*filter: blur(2px);*/
+  }
+
+  iframe {
+    width: 90vw;
+    height: 90vw;
   }
 
   h1 {
